[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes_and_scripts/basic_idle.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="basic_idle" type="AnimatedSprite"]
playing = true
script = ExtResource( 1 )

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
